Version 0.4 - Programm läuft - Timer geht - profile in die Listview geht - speichern vorbereitet